--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "pink-18",
   "version": "17.0.0",
   "private": true,
-  "description": "Личный проект «Пинк» от HTML Academy",
+  "description": "Р›РёС‡РЅС‹Р№ РїСЂРѕРµРєС‚ В«РџРёРЅРєВ» РѕС‚ HTML Academy",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.5.x",
     "browser-sync": "2.26.x",
-    "gulp": "4.0.x",
+    "gulp": "^4.0.2",
     "gulp-less": "4.0.x",
     "gulp-plumber": "1.2.x",
-    "gulp-sourcemaps": "2.6.x",
     "gulp-postcss": "8.0.x",
-    "@htmlacademy/editorconfig-cli": "1.x",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "2.6.x",
     "stylelint": "10.1.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
@@ -37,5 +38,17 @@
   ],
   "engines": {
     "node": "8.16"
-  }
+  },
+  "main": "index.js",
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/amirgali/pink.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/amirgali/pink/issues"
+  },
+  "homepage": "https://github.com/amirgali/pink#readme"
 }
